Issue #2171255 by sylus | sonofxavier: When LinkIt loads the popup isn't aligned.

--- a/css/wetkit-wysiwyg.css
+++ b/css/wetkit-wysiwyg.css
@@ -42,3 +42,8 @@ div.ctools-modal-content .format-toggle, .format-toggle { float: right; margin-t
 
 /** LinkIT */
 .better-autocomplete > .result.highlight > h4, .better-autocomplete > .result.highlight > p { color: black; }
+
+.better-autocomplete > .result.highlight { background: #008fdc; border-top-color: #1f4a64; }
+
+.form-item-linkit-search .better-autocomplete { padding-left: 0px; }
+.form-item-linkit-search .better-autocomplete .group { margin: 0.35355em 0em 0em 0em; }
